# Prewitt_Edge_Detection

./: CMakeLists.txt  main.cpp
